--- a/sms_redirect.html
+++ b/sms_redirect.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=sms:8885722017">
     <script type="text/javascript">
-        window.onload = function() {
-            var smsUrl = "sms:+18885722017?body=NOLA";
-            if (/Mobi|Android/i.test(navigator.userAgent)) {
-                window.location.href = smsUrl;
-            } else {
-                document.getElementById("non-mobile").style.display = "block";
-                document.getElementById("sms-link").href = smsUrl;
-            }
-        };
+        window.location.href = "sms:8885722017";
     </script>
     <title>Redirecting...</title>
-    <style>
-        #non-mobile {
-            display: none;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20px;
-        }
-    </style>
 </head>
 <body>
-    <div id="non-mobile">
-        <p>Please open this link on a mobile device:</p>
-        <a id="sms-link" href="#">Send SMS</a>
-    </div>
+    <p>If you are not redirected, <a href="sms:8885722017">click here to send a message</a>.</p>
 </body>
 </html>
